--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.js]
+[*.js,*.css]
 charset = utf-8
 end_of_line = lf
 indent_size = 2
